viz/mac: Fix pixel size calcuation

In this block
  size_dip_ = size_dip;
  size_pixels_ = gfx::ConvertSizeToPixel(scale_factor_, size_dip_);
  scale_factor_ = scale_factor;
We compute the DIP size using the old scale factor.

TBR=fsamuel

Bug: 807576
Change-Id: Ib1b1f0496301cbd356c84ceec18b951150fe5468
Reviewed-on: https://chromium-review.googlesource.com/896968
Reviewed-by: ccameron <ccameron@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533555}
Former-commit-id: 080aecf31b30e2e540f67bbf4e4c70f28bec8f9a